# uv-practice

./: pyproject.toml
sample/code_eval/: README.md  __main__.py  agent.py  client.py  pyproject.toml  task_manager.py
summarizer_agent/: pyproject.toml
