[project]
name = "code-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.0",
    "common>=0.1.2",
    "google>=3.0.0",
    "protobuf>=6.30.2",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
main = "agents.code_eval.main"
